# chatgpt-sample

./: Makefile  README.md  pyproject.toml
chatgpt_sample/: main.py
chatgpt_sample/application_setting/: my_credential.py
python_starter/: .env.sample  main.py
tests/: test_main.py
