[tool.poetry]
name = "chatgpt-sample"
version = "0.1.1"
description = "Template for Python project"
authors = ["negi524 <egtnrumpbiizarre.info@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "application_setting", from = "chatgpt_sample" }
  ]

[tool.poetry.scripts]
dev = "chatgpt_sample.main:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
PyYAML = "^6.0.1"
python-dotenv = "^1.0.0"
openai = "^0.27.9"
langchain = "^0.0.271"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
types-pyyaml = "^6.0.12.11"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
